| Bug #47476 | Incorrect handling of multi-node-failure in ndbmtd (Dblqh/LocalProxy) | ||
|---|---|---|---|
| Submitted: | 21 Sep 2009 9:44 | Modified: | 21 Sep 2009 13:39 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-7.0 | OS: | Any |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[21 Sep 2009 9:44]
Jonas Oreland
[21 Sep 2009 9:46]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/83863 3020 Jonas Oreland 2009-09-21 ndb - bug#47476 - fix so that error 5050 works correctly with ndbmtd (i.e fix test prg)
[21 Sep 2009 10:28]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/83884 3023 Jonas Oreland 2009-09-21 ndb - bug#47476 - impl. proper semantics of LQH_TRANS_REQ in DblqhProxy
[21 Sep 2009 11:13]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/83893 3023 Jonas Oreland 2009-09-21 ndb - bug#47476 - impl. proper semantics of LQH_TRANS_REQ in DblqhProxy
[21 Sep 2009 13:39]
Jon Stephens
Documented in the NDB-7.0.8 changelog as follows:
Handling of LQH_TRANS_REQ signals was done incorrectly in DBLQH
when the transaction coordinator failed during a LQH_TRANS_REQ
session. This led to incorrect handling of multiple node failures,
particularly when using ndbmtd.
Closed.
[30 Sep 2009 8:14]
Bugs System
Pushed into 5.1.37-ndb-7.0.9 (revid:jonas@mysql.com-20090930075942-1q6asjcp0gaeynmj) (version source revid:jonas@mysql.com-20090921111312-teerg4dz1pz94oso) (merge vers: 5.1.37-ndb-7.0.8) (pib:11)
[30 Sep 2009 8:15]
Bugs System
Pushed into 5.1.35-ndb-7.1.0 (revid:jonas@mysql.com-20090930080049-1c8a8cio9qgvhq35) (version source revid:jonas@mysql.com-20090921111801-wwdzddu2tq93sw6n) (merge vers: 5.1.35-ndb-7.1.0) (pib:11)
