ndb - bug#47476 - fix so that error 5050 works correctly with ndbmtd   (i.e fix test prg)